# Qwen-3-Reranker

./: DATASET_RESEARCH_REPORT.md  LICENSE  Makefile  PROJECT_TREE.txt  README.md  TRAINING_GUIDE.md  instruction_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
configs/: default.yaml
examples/: inference_example.py  train_example.py
legacy/: download_dataset.py  example_usage.py
scripts/: download_models.py  evaluate_reranker.py  push_to_hf.py  quantize_model.py  run_tests.sh  setup_environment.sh  train_reranker.py  train_reranker_hf.py
src/ranking_qwen/: __init__.py
src/ranking_qwen.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/ranking_qwen/cli/: __init__.py  analyze.py  download.py  evaluate.py  preprocess.py  train.py
src/ranking_qwen/data/: __init__.py  dataset_loader.py  downloader.py  preprocessor.py  reranker_dataset.py
src/ranking_qwen/evaluation/: __init__.py  metrics.py  reranker_metrics.py
src/ranking_qwen/models/: __init__.py  qwen_reranker.py
src/ranking_qwen/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_metrics.py  test_preprocessor.py
